# generic-python-repo

./: .gitignore  README.md  pyproject.toml
github_tools/: __init__.py  create_repo.py
scripts/: push_to_github.sh
tests/: __init__.py  test_create_repo.py
